--- a/index.html
+++ b/index.html
@@ -38,27 +38,43 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./images/wedding.png" class="d-block w-100" alt="...">
+                <img src="./images/banner.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <h5>Customers are happy!</h5>
+                  <p>We ensure that our cusomers are satisfied with our services.</p>
                   <button type="button" class="btn btn-primary btn-sm">Book Now</button>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./images/wedding.png" class="d-block w-100" alt="...">
+                <img src="./images/wedding1.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <h5>Inner Looks</h5>
+                  <p>Our hall room is very gorgious to arrange parties.</p>
                   <button type="button" class="btn btn-primary btn-sm">Book Now
                   </button>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./images/wedding.png" class="d-block w-100" alt="...">
+                <img src="./images/wedding2.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>Enough facility</h5>
+                  <p>We concern about customers needs whatever he wants</p>
+                  <button type="button" class="btn btn-primary btn-sm">Book Now</button>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./images/birthday4.jpeg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Birthday party</h5>
+                  <p>You can also manage birthday parties here.</p>
+                  <button type="button" class="btn btn-primary btn-sm">Book Now</button>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./images/wedding3.jpeg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Gorgeous stage</h5>
+                  <p>We have nice stage to host or manage any ceremony.</p>
                   <button type="button" class="btn btn-primary btn-sm">Book Now</button>
                 </div>
               </div>
@@ -81,7 +97,7 @@
 
             <div>
                 <h1>$300</h1>
-                <h2>Business fair</h2>
+                <h2>Birthday party</h2>
                 <p>
                     For most businesses event like book fair, craft fair. <br>
                     <i class="far fa-check-circle"> limited space access</i> <br>
@@ -95,7 +111,7 @@
             </div>
             <div>
                 <h1>$500</h1>
-                <h2>Business fair</h2>
+                <h2>Wedding basic</h2>
                 <p>
                     For most businesses event like book fair, craft fair. <br>
                     <i class="far fa-check-circle"> limited space access</i> <br>
@@ -109,7 +125,7 @@
             </div>
             <div class="package-800">
                 <h1>$800</h1>
-                <h2>Business fair</h2>
+                <h2>Wedding plus</h2>
 
                 <p>
                     For most businesses event like book fair, craft fair. <br>
@@ -126,7 +142,7 @@
             
             <div>
                 <h1>$1200</h1>
-                <h2>Business fair</h2>
+                <h2>Corporate event</h2>
                 <p>
                     For most businesses event like book fair, craft fair. <br>
                     <i class="far fa-check-circle"> limited space access</i> <br>
